<resources>
    <string name="app_name">PLN</string>
    <string name="sistem_monitoring_kesehatan_mesin_pembangkit">SISTEM MONITORING KESEHATAN MESIN PEMBANGKIT</string>
    <string name="pt_pln_persero">PT PLN (Persero)</string>
    <string name="copyright">\u00A9 PT PLN (Persero)</string>
    <string name="home">Home</string>
    <string name="data_master">Data Master</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="monitoring">Monitoring</string>
    <string name="parameter_status_data_kesehatan_pembangkit">Parameter Status Data Kesehatan Pembangkit</string>
    <string name="nomor_asset">Nomor Asset</string>
    <string name="kodeasset">Kode Asset</string>
    <string name="tambah_asset">Tambah Asset</string>
    <string name="masukan_kode_asset">Masukan Kode Asset</string>
    <string name="edit_asset">Edit Asset</string>
    <string name="tambah_data_asset">Tambah Data Asset</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="status">Status</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="webapp_name">PLN</string>
    <string name="print_complete">Print Complete</string>
    <string name="print_failed">Print Failed</string>
</resources>