<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Features.Menu_AddAsset">

    <LinearLayout
        android:id="@+id/FromAddaseet"
        android:background="@drawable/linear"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/tambah_data_asset"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/nomor_asset"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <EditText
            android:id="@+id/AddNomorAsset"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="50sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/kodeasset"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <EditText
            android:id="@+id/AddKodeAsset"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="50sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="Deskripsi"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <EditText
            android:id="@+id/AddDeskrispiAsset"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="100sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="Tanggal"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <EditText
            android:onClick="getTanggal"
            android:id="@+id/AddTglAsset"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="50sp"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:onClick="adddataasset"
                android:text="@string/tambah_data"
                android:id="@+id/addasset"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/btn"
                android:layout_width="300dp"
                android:layout_height="50dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>