<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".Features.Pemilik.Dashboard_Pemilik">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:outlineSpotShadowColor="@color/bg_login"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/LinearHome"
                        android:background="@drawable/linear"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:onClick="Home"
                            android:id="@+id/Home"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_home"
                            android:layout_width="50dp"
                            android:layout_height="50dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/home" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/Lineardatmaster"
                        android:background="@drawable/linear"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:onClick="Datamaster"
                            android:id="@+id/datamaster"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_data"
                            android:layout_width="50dp"
                            android:layout_height="50dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/data_master" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearMonitoring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/linear"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/Monitoring"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_monitoring"
                            android:gravity="center"
                            android:onClick="Monitoring" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/monitoring"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLaporan"
                        android:background="@drawable/linear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_gravity="center"
                            android:onClick="Laporan"
                            android:id="@+id/Laporan"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_message" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Laporan"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/LineraPengaturan"
                        android:background="@drawable/linear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">

                        <ImageView
                            android:onClick="Setting"
                            android:id="@+id/setting"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_setting" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/pengaturan"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </androidx.cardview.widget.CardView>
        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="18sp"
            android:text="@string/parameter_status_data_kesehatan_pembangkit"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:outlineSpotShadowColor="@color/bg_login"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ListPln"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/copyright"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="20dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>