<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Features.Menu_Verifikasi">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/nomor_asset"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <TextView
            android:id="@+id/VerNomorAsset"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="50sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/kodeasset"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <TextView
            android:id="@+id/VerKodeAsset"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="50sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="Deskripsi"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <TextView
            android:id="@+id/VerDeskrispiAsset"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="100sp"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="Stattus Sekarang"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <TextView
            android:id="@+id/statusSekrang"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="50sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="Stattus"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <Spinner
            android:id="@+id/Verstatus"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="50sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="Keterangan"
            android:layout_width="match_parent"
            android:layout_height="25sp"/>
        <EditText
            android:id="@+id/VerketeranganAsset"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="100sp"/>
        <Button
            android:onClick="Verifikasi"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/verifikasi"
            android:background="@drawable/btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>